Add heap space for testing
Signed-off-by: Hernand Azevedo <hernand.azevedo@zup.com.br>